unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Active__c.field-meta.xml
<CustomField>
    <fullName>LH__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>