unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__AllowOverwrite__c.field-meta.xml
<CustomField>
    <fullName>LH__AllowOverwrite__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Overwriting Existing Lookup Values</label>
    <type>Checkbox</type>
</CustomField>