unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Category_Field__c.field-meta.xml
<CustomField>
    <fullName>LH__Category_Field__c</fullName>
    <label>Category Field</label>
    <type>TextArea</type>
</CustomField>