unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Child_Filter__c.field-meta.xml
<CustomField>
    <fullName>LH__Child_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Filter</label>
    <referenceTo>LH__HS_Filter__c</referenceTo>
    <relationshipLabel>Lookup Helper Child Filters</relationshipLabel>
    <relationshipName>LookupHelperChildFilters</relationshipName>
    <type>Lookup</type>
</CustomField>