unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Child_Object__c.field-meta.xml
<CustomField>
    <fullName>LH__Child_Object__c</fullName>
    <label>Child Object</label>
    <type>TextArea</type>
</CustomField>