unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Create_Category_Value__c.field-meta.xml
<CustomField>
    <fullName>LH__Create_Category_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Category Value</label>
    <type>Checkbox</type>
</CustomField>