unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Disable_Realtime__c.field-meta.xml
<CustomField>
    <fullName>LH__Disable_Realtime__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable realtime for this setting.</description>
    <inlineHelpText>Disable realtime for this setting.</inlineHelpText>
    <label>Disable Realtime</label>
    <type>Checkbox</type>
</CustomField>