unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Disabled__c.field-meta.xml
<CustomField>
    <fullName>LH__Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>