unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Filter_Criteria_Only__c.field-meta.xml
<CustomField>
    <fullName>LH__Filter_Criteria_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match By Filter Criteria Only</label>
    <type>Checkbox</type>
</CustomField>