unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Last_Run__c.field-meta.xml
<CustomField>
    <fullName>LH__Last_Run__c</fullName>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>