unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__LH_Setting_Name_Check__c.field-meta.xml
<CustomField>
    <fullName>LH__LH_Setting_Name_Check__c</fullName>
    <label>LH Setting Name Check</label>
    <type>TextArea</type>
</CustomField>