unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Lookup_Source__c.field-meta.xml
<CustomField>
    <fullName>LH__Lookup_Source__c</fullName>
    <formula>IF(NOT(ISBLANK(LH__Parent_Field__c)), LH__Child_Object__c + '.' + LH__Category_Field__c + ' = ' + LH__Parent_Object__c + '.' + LH__Parent_Field__c, LH__Category_Field__c + ' = ' + 'nameorid')</formula>
    <label>Lookup Source</label>
    <type>Text</type>
</CustomField>