unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Lookup_Source_Polymorphic_Parent__c.field-meta.xml
<CustomField>
    <fullName>LH__Lookup_Source_Polymorphic_Parent__c</fullName>
    <description>Used to record the parent of a polymorphic lookup field.</description>
    <inlineHelpText>Used to record the parent of a polymorphic lookup field.</inlineHelpText>
    <label>Lookup_Source_Polymorphic_Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>