unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Parent_Filter__c.field-meta.xml
<CustomField>
    <fullName>LH__Parent_Filter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Filter</label>
    <referenceTo>LH__HS_Filter__c</referenceTo>
    <relationshipLabel>Lookup Helper Parent Filters</relationshipLabel>
    <relationshipName>LookupHelperParentFilters2</relationshipName>
    <type>Lookup</type>
</CustomField>