unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>LH__Parent_ID__c</fullName>
    <label>Parent Record</label>
    <type>TextArea</type>
</CustomField>