unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Schedule_NextFireTime__c.field-meta.xml
<CustomField>
    <fullName>LH__Schedule_NextFireTime__c</fullName>
    <label>Schedule - Next Fire Time</label>
    <type>DateTime</type>
</CustomField>