unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Schedule_Unit__c.field-meta.xml
<CustomField>
    <fullName>LH__Schedule_Unit__c</fullName>
    <label>Schedule - Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
                <default>true</default>
                <label>Hours</label>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>