unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Suppress_Warning_Level_Errors__c.field-meta.xml
<CustomField>
    <fullName>LH__Suppress_Warning_Level_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suppress Warning Level Exceptions</label>
    <type>Checkbox</type>
</CustomField>