unpackaged/main/default/objects/LH__Lookup_Helper_Setting__c/fields/LH__Type__c.field-meta.xml
<CustomField>
    <fullName>LH__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>